more modules for the caroltrio patch to record control and triggers

--- a/patches/caroltrio/recordsignal_edf.ini
+++ b/patches/caroltrio/recordsignal_edf.ini
@@ -15,7 +15,11 @@ format=edf
 file=caroltrio
 blocksize=1
 synchronize=5
-record=midi.control029
+record=midi.control028
 
 physical_min=-35000
 physical_max=35000
+
+[prefix]
+; this prefix is added to the synchronization event
+synchronize=eegsync
