--- a/patches/caroltrio/recordsignal_wav.ini
+++ b/patches/caroltrio/recordsignal_wav.ini
@@ -19,3 +19,7 @@ record=midi.control028
 
 physical_min=-35000
 physical_max=35000
+
+[prefix]
+; this prefix is added to the synchronization event
+synchronize=soundsync
