changes for montreal performance

--- a/patches/caroltrio/inputmidi.ini
+++ b/patches/caroltrio/inputmidi.ini
@@ -8,7 +8,8 @@ port=6379
 
 [midi]
 ;device=Network EEGsynth
-device=Akai MPD32
+;device=Akai MPD32
+device=APC Key 25
 ;device=Launch Control XL
 ;device=TouchOSC Bridge
 ;device=from AVmixer Lite 2.31t 1
@@ -27,5 +28,6 @@ device=Akai MPD32
 prefix=midi
 
 ; the scale and offset are used to map MIDI values to Redis values
+;scale=0.00787401574803149606
 scale=0.00787401574803149606
 offset=0
