--- a/patches/caroltrio/recordtrigger.ini
+++ b/patches/caroltrio/recordtrigger.ini
@@ -10,7 +10,7 @@ port=6379
 file=caroltrio_trigger
 ; the control value to start/stop recording can be assigned to a toggle button
 ; specifying a non-zero value here results in continuous recording
-record=midi.control047
+record=midi.note032
 [input]
 ; the scale and offset are used to map Redis values to actual values
 scale=1
@@ -19,7 +19,7 @@ offset=0
 [trigger]
 ; each item listed here will be recorded, the value to the right of the "=" does not matter
 ; the top row of the Launch Control XL
-midi.control028=yes
+midi.note033=yes
 eeg.synchronize=yes
 control.synchronize=yes
-sound.synchronize=yes
+;sound.synchronize=yes
