--- a/patches/caroltrio/recordsignal_eeg.ini
+++ b/patches/caroltrio/recordsignal_eeg.ini
@@ -15,7 +15,7 @@ format=edf
 file=caroltrio_eeg
 blocksize=1
 synchronize=5
-record=midi.control028
+record=midi.note033
 
 physical_min=-500
 physical_max=500
