first working version

--- a/patches/2sonicpi/outputosc.ini
+++ b/patches/2sonicpi/outputosc.ini
@@ -9,27 +9,27 @@ port=6379
 [osc]
 ; this is the address and port of the receiving software, i.e. this can be running remotely
 hostname=localhost
-port=9000
+port=4559
 
 [input]
 ; the keys (on the left) can have an arbitrary lower-case name, but should map those in the other sections
-alpha=launchcontrol.control077
-beta=launchcontrol.control078
+alpha=post.meanalpha
+;beta=launchcontrol.control078
 
 
 [scale]
 ; the values from Redis are multiplied by this before being sent as OSC message
 ; the OSC values should be between 0 and 1
 alpha=1
-beta=1
+;beta=1
 
 [offset]
 ; the offset is added to the Redis value before being sent as OSC message
 ; the OSC values should be between 0 and 1
 alpha=0
-beta=0
+;beta=0
 
 [output]
 ; the keys here can have an arbitrary lower-case name, but should map those in the other sections
-alpha=/spectral/alpha
-beta=/spectral/beta
+alpha=/alpha
+;beta=/spectral/beta
