--- a/patches/2sonicpi/historycontrol.ini
+++ b/patches/2sonicpi/historycontrol.ini
@@ -7,7 +7,7 @@ port=6379
 
 [history]
 window=5            ; window length for smoothing (s)
-stepsize=0.1        ; update time (s)
+stepsize=1        ; update time (s)
 
 ; the enable option is a Boolean, it can be assigned to a Redis channel to start/stop the updating
 enable=1
@@ -15,7 +15,7 @@ enable=1
 [input]
 ; control values to process, separated by comma
 ; channels=launchcontrol.control077,launchcontrol.control078
-channels=theta,alpha,beta
+channels=spectral.fp1.alpha,spectral.fp2.alpha,spectral.fpz.alpha
 
 [output]
 ; the output name is constructed as channelXX.statistic, where statistic is any of
