--- a/patches/2sonicpi/spectral.ini
+++ b/patches/2sonicpi/spectral.ini
@@ -8,18 +8,17 @@ port=6379
 
 [fieldtrip]
 hostname=localhost
-port=1972
+port=1973
 timeout=30
 
 [input]
 ; this specifies the channels from the FieldTrip buffer
 ; the channel names (on the left) can be specified as you like, but must be all lower-case
-channel1=1
-channel2=2
-;c3=3
-;c4=4
-;frontal=5
-;occipital=6
+fp1=1
+t7=2
+fp2=3
+t8=4
+fpz=5
 
 [processing]
 ; the sliding window is specified in seconds
@@ -36,9 +35,10 @@ gamma=35-45
 ; it is also possible to specify the range using control values from Redis
 
 ; variable=launchcontrol.control077-launchcontrol.control078
-; redband=plotsignal.redband.low-plotsignal.redband.high
-; blueband=plotsignal.blueband.low-plotsignal.blueband.high
+;redband=plotsignal.redband.low-plotsignal.redband.high
+;blueband=plotsignal.blueband.low-plotsignal.blueband.high
 
 [output]
 ; the results will be written to Redis as "spectral.channel1.alpha" etc.
 prefix=spectral
+;spectral.fpz.alpha
