--- a/patches/2sonicpi/postprocessing.ini
+++ b/patches/2sonicpi/postprocessing.ini
@@ -31,9 +31,16 @@ min.fp2=spectral.fp2.alpha.min
 [output]
 ; besides +, -, /, *, the equations also support log, log2, log10, exp, power from numpy
 ; and compress, limit, rescale, normalizerange, normalizestandard from EEGsynth
-;post.alpha.fp1=normalizestandard(frontalalpha.fp1,mm.fp1,stdd.fp1)
-;post.alpha.fp2=normalizestandard(frontalalpha.fp2,mm.fp2,stdd.fp2)
-;post.alpha.fpz=normalizestandard(frontalalpha.fpz,mm.fpz,stdd.fpz)
+
+;post.alpha.fp1=64 * normalizestandard(mm.fp1,mm.fp1,stdd.fp1)
+;post.alpha.fp2=64 * normalizestandard(mm.fp2,mm.fp2,stdd.fp2)
+;post.alpha.fpz=64 * normalizestandard(mm.fpz,mm.fpz,stdd.fpz)
+
+
+
+;post.alpha.fp1=64 * normalizestandard(frontalalpha.fp1,mm.fp1,stdd.fp1) + 64 
+;post.alpha.fp2=64 * normalizestandard(frontalalpha.fp2,mm.fp2,stdd.fp2) + 64
+;post.alpha.fpz=64 * normalizestandard(frontalalpha.fpz,mm.fpz,stdd.fpz) + 64
 
 
 post.alpha.fp1=64 * normalizerange(mm.fp1,max.fp1,min.fp1) + 64 
