cleaned up unnecessary files, added midi controller and baseline control

--- a/patches/2sonicpi/inputmidi.ini
+++ b/patches/2sonicpi/inputmidi.ini
@@ -8,8 +8,8 @@ port=6379
 
 [midi]
 ;device=Network EEGsynth
-;device=Akai MPD32
-device=APC Key 25
+device=Akai MPD32
+;device=APC Key 25
 ;device=Launch Control XL
 ;device=TouchOSC Bridge
 ;device=from AVmixer Lite 2.31t 1
