--- a/patches/2sonicpi/outputosc.ini
+++ b/patches/2sonicpi/outputosc.ini
@@ -13,7 +13,7 @@ port=4559
 
 [input]
 ; the keys (on the left) can have an arbitrary lower-case name, but should map those in the other sections
-alpha=post.meanalpha
+alpha=post.front_alpha
 ;beta=launchcontrol.control078
 
 
