--- a/patches/2sonicpi/playbacksignal.ini
+++ b/patches/2sonicpi/playbacksignal.ini
@@ -14,6 +14,6 @@ file=/Users/nicolasfarrugia/eegsynth/patches/2sonicpi/fileperf3.edf
 blocksize=0.1
 
 speed=1
-play=midi.note010
-pause=midi.note011
-rewind=midi.note012
+play=midi.control029
+pause=midi.control030
+rewind=midi.note048
