--- a/patches/2sonicpi/historycontrol.ini
+++ b/patches/2sonicpi/historycontrol.ini
@@ -6,11 +6,11 @@ hostname=localhost
 port=6379
 
 [history]
-window=5            ; window length for smoothing (s)
-stepsize=1        ; update time (s)
+window=60            ; window length for smoothing (s)
+stepsize=5        ; update time (s)
 
 ; the enable option is a Boolean, it can be assigned to a Redis channel to start/stop the updating
-enable=1
+enable=midi.control028
 
 [input]
 ; control values to process, separated by comma
