--- a/patches/2sonicpi/postprocessing.ini
+++ b/patches/2sonicpi/postprocessing.ini
@@ -36,16 +36,16 @@ min.fp2=spectral.fp2.alpha.min
 ;post.alpha.fp2=64 * normalizestandard(mm.fp2,mm.fp2,stdd.fp2)
 ;post.alpha.fpz=64 * normalizestandard(mm.fpz,mm.fpz,stdd.fpz)
 
+post.front_alpha =(normalizestandard(frontalalpha.fp1,mm.fp1,stdd.fp1) + normalizestandard(frontalalpha.fp2,mm.fp2,stdd.fp2) + normalizestandard(frontalalpha.fpz,mm.fpz,stdd.fpz))/3
+
+;post.alpha.fp1=normalizestandard(frontalalpha.fp1,mm.fp1,stdd.fp1)
+;post.alpha.fp2=normalizestandard(frontalalpha.fp2,mm.fp2,stdd.fp2)
+;post.alpha.fpz=normalizestandard(frontalalpha.fpz,mm.fpz,stdd.fpz)
 
 
-;post.alpha.fp1=64 * normalizestandard(frontalalpha.fp1,mm.fp1,stdd.fp1) + 64 
-;post.alpha.fp2=64 * normalizestandard(frontalalpha.fp2,mm.fp2,stdd.fp2) + 64
-;post.alpha.fpz=64 * normalizestandard(frontalalpha.fpz,mm.fpz,stdd.fpz) + 64
-
-
-post.alpha.fp1=64 * normalizerange(mm.fp1,max.fp1,min.fp1) + 64 
-post.alpha.fp2=64 * normalizerange(mm.fp2,max.fp2,min.fp2) + 64
-post.alpha.fpz=64 * normalizerange(mm.fpz,max.fpz,min.fpz) + 64
+;post.alpha.fp1=64 * normalizerange(mm.fp1,max.fp1,min.fp1) + 64 
+;post.alpha.fp2=64 * normalizerange(mm.fp2,max.fp2,min.fp2) + 64
+;post.alpha.fpz=64 * normalizerange(mm.fpz,max.fpz,min.fpz) + 64
 
 
 
