--- a/patches/2sonicpi/spectral.ini
+++ b/patches/2sonicpi/spectral.ini
@@ -35,8 +35,8 @@ gamma=35-45
 ; it is also possible to specify the range using control values from Redis
 
 ; variable=launchcontrol.control077-launchcontrol.control078
-;redband=plotsignal.redband.low-plotsignal.redband.high
-;blueband=plotsignal.blueband.low-plotsignal.blueband.high
+redband=plotspectral.redband.low-plotspectral.redband.high
+blueband=plotspectral.blueband.low-plotspectral.blueband.high
 
 [output]
 ; the results will be written to Redis as "spectral.channel1.alpha" etc.
