--- a/patches/brainsongs/openbci2ft.ini
+++ b/patches/brainsongs/openbci2ft.ini
@@ -27,7 +27,7 @@ serial     = /dev/ttyUSB0
 chan1  = on
 chan2  = on
 chan3  = on
-chan4  = off
+chan4  = on
 chan5  = off
 chan6  = off
 chan7  = off
@@ -45,7 +45,7 @@ chan11 = off; accelerometer in Z-direction
 chan1  = C4
 chan2  = P4
 chan3  = O2
-;chan4  = O2
+chan4  = EOG
 ;chan5  = T8
 ;chan6 = Fpz
 ; these are not different between monopolar and bipolar
