--- a/patches/ft2osc/ft2osc.ini
+++ b/patches/ft2osc/ft2osc.ini
@@ -21,6 +21,8 @@ port=5014
 ; the channel names (on the left) can be specified as you like, but must be all lower-case
 channel1=1
 channel2=2
+channel3=3
+channel4=4
 ;c3=3
 ;c4=4
 ;frontal=5
