settings for ECG on channel 5

--- a/patches/brainsongs/openbci2ft.ini
+++ b/patches/brainsongs/openbci2ft.ini
@@ -28,7 +28,7 @@ chan1  = on
 chan2  = on
 chan3  = on
 chan4  = on
-chan5  = off
+chan5  = on
 chan6  = off
 chan7  = off
 chan8  = off
@@ -46,6 +46,7 @@ chan1  = C4
 chan2  = P4
 chan3  = O2
 chan4  = EOG
+chan5  = ECG
 ;chan5  = T8
 ;chan6 = Fpz
 ; these are not different between monopolar and bipolar
@@ -67,8 +68,8 @@ chan1 = x1060110X
 chan2 = x2060110X
 chan3 = x3060110X
 chan4 = x4060110X
-chan5 = x5060110X
-chan6 = x6060110X
+chan5 = x5060000X
+chan6 = x6160000X
 chan7 = x7160010X
 chan8 = x8160010X
 
