--- a/patches/brainsongs/outputosc.ini
+++ b/patches/brainsongs/outputosc.ini
@@ -9,7 +9,7 @@ port=6379
 
 [osc]
 ; this is the address and port of the receiving software, i.e. this can be running remotely
-hostname=10.100.1.101
+hostname=localhost
 port=5014
 
 [input]
@@ -21,7 +21,8 @@ port=5014
 alphapower = spectral.c4.alpha.mean
 occalphapower= spectral.o2.alpha.mean
 betapower = spectral.c4.beta.mean
-
+heartrate=ecg.heartrate  ; used as control signal and trigger
+heartbeat=ecg.heartbeat  ; used as control signal and trigger
 
 [scale]
 ; the values from Redis are multiplied by this before being sent as OSC message
@@ -30,6 +31,8 @@ alphapower=1
 occalphapower=1
 betapower=1
 alphaoverbeta=1
+heartrate = 1 
+heartbeat = 1
 
 [offset]
 ; the offset is added to the Redis value before being sent as OSC message
@@ -38,9 +41,13 @@ alphapower=1
 occalphapower=1
 betapower=1
 alphaoverbeta=1
+heartrate = 1
+heartbeat = 1
 
 [output]
 ; the keys here can have an arbitrary lower-case name, but should map those in the other sections
 alphapower=/alpha
 occalphapower=/occalpha
 betapower=/beta
+heartrate=/heartrate
+heartbeat = /heartbeat
