--- a/patches/brainsongs/plotcontrol.ini
+++ b/patches/brainsongs/plotcontrol.ini
@@ -20,6 +20,8 @@ height=480
 alphapower = spectral.c4.alpha.mean
 occalphapower= spectral.o2.alpha.mean
 betapower = spectral.c4.beta.mean
+heartrate=ecg.heartrate  ; used as control signal and trigger
+heartbeat=ecg.heartbeat  ; used as control signal and trigger
 
 [ylim]
 ; vertical limits, smoothly adjusting when not specified
@@ -27,9 +29,13 @@ betapower = spectral.c4.beta.mean
 alphapower = 
 occalphapower= 
 betapower = 
+heartrate=
+heartbeat= 
 
 [linecolor]
 ;launchcontrol=w,w
 alphapower = r,b
 occalphapower= r,b
 betapower = r,b
+heartrate= w,w
+heartbeat= w,w
