added blink and ecg

--- a/patches/brainsongs/outputosc.ini
+++ b/patches/brainsongs/outputosc.ini
@@ -23,6 +23,7 @@ occalphapower= spectral.o2.alpha.mean
 betapower = spectral.c4.beta.mean
 heartrate=ecg.heartrate  ; used as control signal and trigger
 heartbeat=ecg.heartbeat  ; used as control signal and trigger
+blink = blink.channel4
 
 [scale]
 ; the values from Redis are multiplied by this before being sent as OSC message
@@ -33,6 +34,7 @@ betapower=1
 alphaoverbeta=1
 heartrate = 1 
 heartbeat = 1
+blink = 1 
 
 [offset]
 ; the offset is added to the Redis value before being sent as OSC message
@@ -43,6 +45,7 @@ betapower=1
 alphaoverbeta=1
 heartrate = 1
 heartbeat = 1
+blink = 1
 
 [output]
 ; the keys here can have an arbitrary lower-case name, but should map those in the other sections
@@ -51,3 +54,4 @@ occalphapower=/occalpha
 betapower=/beta
 heartrate=/heartrate
 heartbeat = /heartbeat
+blink = /blink
