--- a/patches/brainsongs/plotcontrol.ini
+++ b/patches/brainsongs/plotcontrol.ini
@@ -22,6 +22,7 @@ occalphapower= spectral.o2.alpha.mean
 betapower = spectral.c4.beta.mean
 heartrate=ecg.heartrate  ; used as control signal and trigger
 heartbeat=ecg.heartbeat  ; used as control signal and trigger
+blink = blink.channel4
 
 [ylim]
 ; vertical limits, smoothly adjusting when not specified
@@ -31,7 +32,7 @@ occalphapower=
 betapower = 
 heartrate=
 heartbeat= 
-
+blink= 
 [linecolor]
 ;launchcontrol=w,w
 alphapower = r,b
@@ -39,3 +40,4 @@ occalphapower= r,b
 betapower = r,b
 heartrate= w,w
 heartbeat= w,w
+blink=w,w
