scaled and sending int

--- a/patches/ft2osc/ft2osc.ini
+++ b/patches/ft2osc/ft2osc.ini
@@ -13,7 +13,7 @@ timeout=30
 
 [osc]
 ; this is the address and port of the receiving software, i.e. this can be running remotely
-hostname=10.100.1.101
+hostname=localhost
 port=5014
 
 [input]
