plotting the raw signal instead of mean

--- a/patches/brainsongs/plotcontrol.ini
+++ b/patches/brainsongs/plotcontrol.ini
@@ -17,9 +17,9 @@ height=480
 ; control values to plot, separated by comma
 ; each line will create a new graph with the selected control values
 ;launchcontrol=launchcontrol.control077,launchcontrol.control078
-alphapower = spectral.c4.alpha.mean
-occalphapower= spectral.o2.alpha.mean
-betapower = spectral.c4.beta.mean
+alphapower = spectral.c4.alpha
+occalphapower= spectral.o2.alpha
+betapower = spectral.c4.beta
 heartrate=ecg.heartrate  ; used as control signal and trigger
 heartbeat=ecg.heartbeat  ; used as control signal and trigger
 blink = blink.channel4
