--- a/patches/brainsongs/plotspectral.ini
+++ b/patches/brainsongs/plotspectral.ini
@@ -26,8 +26,8 @@ freqrange=1-40      ; frequency range for plotting (Hz)
 
 [input]
 showred=1                           ; boolean, can be connected to Redis
-redfreq=launchcontrol.control013    ; center frequency of red band (Hz)
-redwidth=launchcontrol.control029   ; half-width of red band (Hz)
+redfreq=9    ; center frequency of red band (Hz)
+redwidth=1  ; half-width of red band (Hz)
 showblue=1                          ; boolean, can be connected to Redis
 bluefreq=launchcontrol.control014   ; center frequency of blue band (Hz)
 bluewidth=launchcontrol.control030  ; half-width of blue band (Hz)
