sending raw freq bands pow instead of mean

--- a/patches/brainsongs/outputosc.ini
+++ b/patches/brainsongs/outputosc.ini
@@ -9,7 +9,7 @@ port=6379
 
 [osc]
 ; this is the address and port of the receiving software, i.e. this can be running remotely
-hostname=localhost
+hostname=192.168.1.5
 port=5014
 
 [input]
@@ -18,9 +18,9 @@ port=5014
 ;occalphapower= post.occiptalpha
 ;betapower = post.beta 
 ;alphaoverbeta = post.alphaoverbeta 
-alphapower = spectral.c4.alpha.mean
-occalphapower= spectral.o2.alpha.mean
-betapower = spectral.c4.beta.mean
+alphapower = spectral.c4.alpha
+occalphapower= spectral.o2.alpha
+betapower = spectral.c4.beta
 heartrate=ecg.heartrate  ; used as control signal and trigger
 heartbeat=ecg.heartbeat  ; used as control signal and trigger
 blink = blink.channel4
