--- a/patches/ft2osc/ft2osc.ini
+++ b/patches/ft2osc/ft2osc.ini
@@ -13,7 +13,7 @@ timeout=30
 
 [osc]
 ; this is the address and port of the receiving software, i.e. this can be running remotely
-hostname=localhost
+hostname=192.168.1.5
 port=5014
 
 [input]
