First workng version

--- a/module/ft2osc/ft2osc.ini
+++ b/module/ft2osc/ft2osc.ini
@@ -6,37 +6,37 @@ delay=0.05
 hostname=localhost
 port=6379
 
+[fieldtrip]
+hostname=localhost
+port=1972
+timeout=30
+
 [osc]
 ; this is the address and port of the receiving software, i.e. this can be running remotely
-hostname=localhost
-port=8000
+hostname=192.168.0.5
+port=5014
 
 [input]
-; the keys (on the left) can have an arbitrary lower-case name, but should match those in other sections
-key01=launchcontrol.control077
-key02=launchcontrol.control078
-key03=launchcontrol.control079
-key04=launchcontrol.control080
+; this specifies the channels from the FieldTrip buffer
+; the channel names (on the left) can be specified as you like, but must be all lower-case
+channel1=1
+channel2=2
+channel3=3
+;channel4=4
+;channel5=5
+;c3=3
+;c4=4
+;frontal=5
+;occipital=6
 
-[scale]
-; the values from Redis are multiplied by this before being sent as OSC message
-; the OSC values should be between 0 and 1
-key01=1
-key02=1
-key03=1
-key04=1
-
-[offset]
-; the offset is added to the Redis value before being sent as OSC message
-; the OSC values should be between 0 and 1
-key01=0
-key02=0
-key03=0
-key04=0
+[processing]
+; the sliding window is specified in samples
+window=5000
 
 [output]
 ; the keys here can have an arbitrary lower-case name, but should map those in the other sections
-key01=/launchcontrol/control077
-key02=/launchcontrol/control078
-key03=/launchcontrol/control079
-key04=/launchcontrol/control080
+channel1=/ft2osc/channel1
+channel2=/ft2osc/channel2
+channel3=/ft2osc/channel3
+;channel4=/ft2osc/channel4
+;channel5=/ft2osc/channel5
