first version of ft2osc module

--- a/module/ft2osc/ft2osc.ini
+++ b/module/ft2osc/ft2osc.ini
@@ -1,6 +1,6 @@
 [general]
 debug=2
-delay=0.05
+delay=0.9
 
 [redis]
 hostname=localhost
@@ -22,8 +22,8 @@ port=5014
 channel1=1
 channel2=2
 channel3=3
-;channel4=4
-;channel5=5
+channel4=4
+channel5=5
 ;c3=3
 ;c4=4
 ;frontal=5
@@ -31,12 +31,11 @@ channel3=3
 
 [processing]
 ; the sliding window is specified in samples
-window=5000
-
+window=250
 [output]
 ; the keys here can have an arbitrary lower-case name, but should map those in the other sections
-channel1=/ft2osc/channel1
-channel2=/ft2osc/channel2
-channel3=/ft2osc/channel3
-;channel4=/ft2osc/channel4
-;channel5=/ft2osc/channel5
+channel1=/usine/channel1
+channel2=/usine/channel2
+channel3=/usine/channel3
+channel4=/usine/channel4
+channel5=/usine/channel5
