added ini file to patch and cleanup

--- a/patches/brainsongs/ft2osc.ini
+++ b/patches/brainsongs/ft2osc.ini
@@ -1,6 +1,6 @@
 [general]
 debug=2
-delay=0.05
+delay=0.9
 
 [redis]
 hostname=localhost
@@ -8,12 +8,12 @@ port=6379
 
 [fieldtrip]
 hostname=localhost
-port=1973
+port=1972
 timeout=30
 
 [osc]
 ; this is the address and port of the receiving software, i.e. this can be running remotely
-hostname=192.168.1.5
+hostname=192.168.0.5
 port=5014
 
 [input]
@@ -31,5 +31,11 @@ channel5=5
 
 [processing]
 ; the sliding window is specified in samples
-window=50
-
+window=250
+[output]
+; the keys here can have an arbitrary lower-case name, but should map those in the other sections
+channel1=/usine/channel1
+channel2=/usine/channel2
+channel3=/usine/channel3
+channel4=/usine/channel4
+channel5=/usine/channel5
